# Iliade

./: .gitignore  README.md
client/: CMakeLists.txt
client/include/: ClientEventManager.hpp  ServerPlug.hpp  SimpleUDPConnection.hpp
client/rsc/: mario.xcf  platform1.xcf  star.xcf
client/src/: UnknownEventManager.cpp  __main  main.cpp
server/: CMakeLists.txt
server/include/: ClientPlug.hpp  IServerCallbacks.hpp  PlayerInfo.hpp  Server.hpp  ServerEventManager.hpp  SimpleUDPConnection.hpp
server/include/user/: TestServerCallbacks.hpp  mainClient.hpp
server/src/: ClientPlug.cpp  Server.cpp  ServerEventManager.cpp  SimpleUDPConnection.cpp  UnknownEventManager.cpp  main.cpp
shared/include/: IliadeVersion.hpp  IliadeVersion.hpp.in
shared/include/connect/: ConnectErrors.hpp  CrossSocket.hpp  IConnection.hpp  Plug.hpp  SimpleTCPConnection.hpp  UnixErrors.hpp
shared/include/core/: AttachedStdTypes.hpp  ComponentTypeIds.hpp  ExternalTypeComponent.hpp  GameAsset.hpp  GameComponent.hpp  GameComponentModel.hpp  GameEvent.hpp  GameScene.hpp  GameSceneModel.hpp  IContext.hpp  IliadeEngine.hpp  IliadeErrors.hpp  PlayableElement.hpp
shared/include/graphics/: Animation.hpp  DebugShapes.hpp  Frame.hpp  ISpriteRessource.hpp  IliadeGraphics.hpp  SpriteAsset.hpp  SpriteLayer.hpp
shared/include/inputs/: ILocalInputManager.hpp  InputEvent.hpp  ReceivedInputManager.hpp  SfmlLocalInputManager.hpp
shared/include/physics/: FixtureBox.hpp  GameElement.hpp  GameFixture.hpp  GameHitBox.hpp  IFixtureShape.hpp  IliadePhysics.hpp
shared/src/: __main
(+31 files in other folders)
